docker-registry/registry-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-auth
  namespace: gitlab
  labels:
    app: registry
spec:
  ports:
  - port: 5001
  selector:
    app: registry
    tier: auth
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: docker-registry-auth
  namespace: gitlab
  labels:
    app: registry
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
        tier: auth
    spec:
      containers:
      - image: cesanta/docker_auth:1
        name: registry-auth
        ports:
        - containerPort: 5001
          name: registry-auth
        volumeMounts:
        - mountPath: /config
          name: config-auth-registry
        - mountPath: /ssl
          name: tls-cert-key
      volumes:
      - name: tls-cert-key
        secret:
          secretName: rauth-tls-certificate
      - name: config-auth-registry
        configMap:
          name: docker-registry-auth-cm
