docker-registry/registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: gitlab
  labels:
    app: registry
spec:
  ports:
    - port: 5000
  selector:
    app: registry
    tier: backend
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: docker-registry-backend
  namespace: gitlab
  labels:
    app: registry
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
        tier: backend
    spec:
      containers:
      - image: registry:2
        name: registry
        ports:
        - containerPort: 5000
          name: registry
        volumeMounts:
        - mountPath: /var/lib/registry
          name: data
        - mountPath: /ssl
          name: tls-cert-key
        - mountPath: /etc/docker/registry
          name: config-registry
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: docker-registry-pv-claim
      - name: tls-cert-key
        secret:
          secretName: registry-auth-tls-certificate
      - name: config-registry
        configMap:
          name: docker-registry-cm
