docker-registry/registry-auth-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry-auth
  namespace: gitlab
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - rauth.stouffcapital.com
    secretName: rauth-tls-certificate
  rules:
  - host: rauth.stouffcapital.com
    http:
      paths:
      - backend:
          serviceName: docker-registry-auth
          servicePort: 5001
