docker-registry/registry-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  namespace: gitlab
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - registry.stouffcapital.tech
    secretName: docker-registry-tls-certificate
  rules:
  - host: registry.stouffcapital.tech
    http:
      paths:
      - backend:
          serviceName: docker-registry
          servicePort: 5000
